the most recent line first.  This is can be useful when working with
macros with many lines, such as from 'kmacro-edit-lossage'.

** Miscellaneous

---
*** Webjump now assumes URIs are HTTPS instead of HTTP.
For links in 'webjump-sites' without an explicit URI scheme, it was
previously assumed that they should be prefixed with "http://".  Such
URIs are now prefixed with "https://" instead.

** Customize

+++
*** New command 'customize-dirlocals'.
This command pops up a buffer to edit the settings in ".dir-locals.el".


* New Modes and Packages in Emacs 30.1

** New major modes based on the tree-sitter library

+++
*** New major mode 'html-ts-mode'.
An optional major mode based on the tree-sitter library for editing
HTML files.

---
*** New major mode 'heex-ts-mode'.
A major mode based on the tree-sitter library for editing HEEx files.

---
*** New major mode 'elixir-ts-mode'.
A major mode based on the tree-sitter library for editing Elixir files.

---
*** New major mode 'lua-ts-mode'.
A major mode based on the tree-sitter library for editing Lua files.

** Minibuffer and Completions

*** New commands 'previous-line-completion' and 'next-line-completion'.
Bound to '<UP>' and '<DOWN>' arrow keys, respectively, they navigate
the "*Completions*" buffer vertically by lines, wrapping at the
top/bottom when 'completion-auto-wrap' is non-nil.

*** New user option 'minibuffer-visible-completions'.
When customized to non-nil, you can use arrow key in the minibuffer
to navigate the completions displayed in the *Completions* window.
Typing 'RET' selects the highlighted candidate.  'C-g' hides the
completions window.  When the completions window is not visible,
then all these keys have their usual meaning in the minibuffer.
This option is supported for in-buffer completion as well.

+++
*** New global minor mode 'minibuffer-regexp-mode'.
This is a minor mode for editing regular expressions in the minibuffer.